# livraria-backend

./: .gitignore  Procfile  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_autor.py  0003_alter_autor_options_livro.py  0004_rename_isbn_livro_isbn_livro_autores.py  0005_compra.py  0006_itenscompra.py
